unpackaged/main/default/objects/Business_Calendar__c/Business_Calendar__c.object-meta.xml
<CustomObject>
    <label>Business Calendar</label>
    <nameField>
        <label>Business Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Calendars</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>