unpackaged/main/default/objects/Business_Calendar__c/fields/Calendar_Days_Remaining_Month__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Days_Remaining_Month__c</fullName>
    <label>Calendar Days Remaining: Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>