unpackaged/main/default/objects/Business_Calendar__c/fields/Is_Local_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Is_Local_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Local Holiday?</label>
    <type>Checkbox</type>
</CustomField>