unpackaged/main/default/objects/Business_Calendar__c/fields/Is_Sales_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sales Event?</label>
    <type>Checkbox</type>
</CustomField>