unpackaged/main/default/objects/Business_Calendar__c/fields/Month_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Month_Short_Name__c</fullName>
    <formula>CASE(MONTH(Date__c),
1,&quot;Jan&quot;,
2,&quot;Feb&quot;,
3,&quot;Mar&quot;,
4,&quot;Apr&quot;,
5,&quot;May&quot;,
6,&quot;Jun&quot;,
7,&quot;Jul&quot;,
8,&quot;Aug&quot;,
9,&quot;Sep&quot;,
10,&quot;Oct&quot;,
11,&quot;Nov&quot;,
12,&quot;Dec&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month: Short Name</label>
    <type>Text</type>
</CustomField>