unpackaged/main/default/objects/Business_Calendar__c/fields/Productive_Days_Remaining_Week__c.field-meta.xml
<CustomField>
    <fullName>Productive_Days_Remaining_Week__c</fullName>
    <label>Productive Days Remaining: Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>