unpackaged/main/default/objects/Business_Calendar__c/fields/Productivity__c.field-meta.xml
<CustomField>
    <fullName>Productivity__c</fullName>
    <label>Productivity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>