unpackaged/main/default/objects/Business_Calendar__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <formula>CEILING(((Date__c - DATE(YEAR(Date__c), 1, 1) + 1) +
MOD(DATE(YEAR(Date__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week: Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>