unpackaged/main/default/objects/Business_Calendar__c/fields/Weekday_Number__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Number__c</fullName>
    <formula>WEEKDAY(Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday: Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>