unpackaged/main/default/objects/Business_Calendar__c/fields/Weekday_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Short_Name__c</fullName>
    <formula>CASE(WEEKDAY(Date__c),
 1,&quot;Sun&quot;,
 2,&quot;Mon&quot;,
 3,&quot;Tue&quot;,
 4,&quot;Wed&quot;,
 5,&quot;Thu&quot;,
 6,&quot;Fri&quot;,
 7,&quot;Sat&quot;,
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday: Short Name</label>
    <type>Text</type>
</CustomField>