unpackaged/main/default/objects/Business_Calendar__c/validationRules/name_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>name_unique</fullName>
    <active>true</active>
    <errorConditionFormula>VLOOKUP($ObjectType.Business_Calendar__c.Fields.Name,$ObjectType.Business_Calendar__c.Fields.Name,Name)=Name &amp;&amp; (ISNEW() || ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Business calendar entry already exists</errorMessage>
</ValidationRule>